# text-to-video-analytics

./: README.md  db-schema.plantuml  docker-compose.yml  example.env  pyproject.toml
app/: db.py  main.py  prompts.py  render_db.py  settings.py  text2sql.py  validate_sql.py
db/: 01_schema.sql  02_load_data.sql
tests/: test_validate_sql.py
